[package]
name = "carve-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "WASM bindings for the Carve parser and HTML renderer."
license = "MIT"
repository = "https://github.com/markup-carve/carve-wasm"
homepage = "https://markup-carve.github.io/carve/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
carve = { package = "carve-lang", git = "https://github.com/markup-carve/carve-rs" }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
